d3 angular2 integration:initial version workable

--- a/lab/report/app/menu.component.html
+++ b/lab/report/app/menu.component.html
@@ -1,7 +1,7 @@
 
     <h2>Dates And Month </h2>
     <nav>
-        <div><a routerLink="/auplot">2016-10</a></div>
+        <div><a href="/auplot">2016-10</a></div>
     </nav>
 
-    <!--<router-outlet></router-outlet>-->
+
