--- a/lab/report/app/app.component.html
+++ b/lab/report/app/app.component.html
@@ -1,7 +1,12 @@
 <h1>Hello Angular!</h1><hr/>
+<!--
 <nav>
     <a routerLink="/menu">MenuDates </a>
 </nav>
+<div>I am in app </div>
+-->
 
+<!--It must be put here,instead of the index page-->
+<my-menu>Loading menu ...</my-menu>
 
-<my-menu></my-menu>
+<device-counter-chart></device-counter-chart>
