--- a/lab/report/app/device-counter.component.css
+++ b/lab/report/app/device-counter.component.css
@@ -1,3 +1,5 @@
+body { font: 12px Arial;}
+
     /* tell the SVG path to be a thin blue line without any area fill */
     path {
         stroke-width: 1;
