--- a/lab/report/app/app.component.html
+++ b/lab/report/app/app.component.html
@@ -1,12 +1,12 @@
 <h1>Hello Angular!</h1><hr/>
-<!--
-<nav>
-    <a routerLink="/menu">MenuDates </a>
-</nav>
-<div>I am in app </div>
--->
 
-<!--It must be put here,instead of the index page-->
+<!--It must be put here,instead of the index page,why-->
 <my-menu>Loading menu ...</my-menu>
 
-<device-counter-chart></device-counter-chart>
+<!--This can be removed and put on to the index page.why? it has not html display?-->
+<!--<device-counter-chart></device-counter-chart>-->
+
+<!--<my-welcome></my-welcome>-->
+
+<!--This can not be put into the index page or else it will complain not router-outlet for devicecounter component-->
+<router-outlet></router-outlet>
